--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,16 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+
 apply plugin: 'com.google.gms.google-services'
+
+apply plugin: 'kotlin-kapt'
+
+kapt {
+    generateStubs = true
+}
+
+def dagger_version=2.21
 
 android {
     compileSdkVersion 28
@@ -29,10 +38,29 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.core:core-ktx:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // Material Design
     implementation 'com.google.android.material:material:1.0.0'
+
+    // Firebase
     implementation "com.google.firebase:firebase-core:16.0.3"
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+
+    // Dagger
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
+
+    // Dagger Android
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+
+
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.5.1'
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
