--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ kapt {
     generateStubs = true
 }
 
-def dagger_version=2.21
+def dagger_version = 2.21
 
 android {
     compileSdkVersion 28
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
 
     // Dagger
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger:$dagger_version"
 
@@ -55,7 +56,6 @@ dependencies {
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
-
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.5.1'
