--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.welcome.WelcomeActivity"></activity>
+        <activity android:name=".ui.addQuote.AddJokeActivity" />
+        <activity android:name=".ui.register.RegisterActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
         <activity
             android:name=".ui.home.HomeActivity"
             android:label="@string/app_name"
