--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.welcome.WelcomeActivity"></activity>
-        <activity android:name=".ui.addQuote.AddJokeActivity" />
+        <activity android:name=".ui.addQuote.AddQuoteActivity" />
         <activity android:name=".ui.register.RegisterActivity" />
         <activity android:name=".ui.login.LoginActivity" />
         <activity
